prevent cell row titles wrapping

--- a/src/RowComponents/RowComponentStyles.module.css
+++ b/src/RowComponents/RowComponentStyles.module.css
@@ -6,6 +6,7 @@
 
 .cellRowsTitle {
     padding-right: 1.5em;
+    white-space: nowrap;
 }
 .cellWrap {
     display: flex;
